--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "projectlibrary",
+  "name": "@mhsecondproject/projectlibrary",
   "version": "1.0.0",
   "description": "Common code amongest services",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "./build/**/*"
+  ],
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "del-cli ./dist/*"
@@ -12,7 +15,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.44",
+    "cookie-session": "^2.0.0",
     "del-cli": "^5.0.0",
+    "dotenv": "^16.0.3",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^18.11.18",
+    "express": "^4.18.2",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
+    "npm": "^9.2.0"
   }
 }
